Add system message and welcome message to the ai

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <div class="chat-container">
         <div id="messages"></div>
         <form id="chat-form">
-            <input type="text" id="user-input" placeholder="Type a message..." required>
+            <input type="text" id="user-input" placeholder="Type a message..." required autocomplete="off">
             <button type="submit">Send</button>
         </form>
     </div>
